fixing JQ animations

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         <link rel="stylesheet" href="static/css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-        <script src="static/js/estimate.js"></script>
+                <script   src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script> 
+
+	 <script src="static/js/estimate.js"></script>
         
 </head>
 <body onLoad="window.scroll(0, 100)">
