--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a responsive product landing page.">
+    <meta name="description" content="Airbnb Data Analysis">
     <title>AirBnB Listings Data</title>
 
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         <link rel="stylesheet" href="static/css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-         <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+        <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
 
-	 <script src="static/js/estimate.js"></script>
+	    <script src="static/js/estimate.js"></script>
 
 </head>
 <body onLoad="window.scroll(0, 100)">
@@ -125,7 +125,7 @@
 
     <!-- Footer -->
     <span class="footer l-box is-center" id="footer">
-       View the source of my code <a href="">here!</a>.
+       View the source of my code <a href="https://github.com/maxwhoppa/Capital-One-AirBnb">here!</a>.
     </span>
 
     <script>
@@ -158,7 +158,7 @@
   });
 
  // Navbar Scrolling Animations
-  $("#mapButton").click(function() {
+$("#mapButton").click(function() {
     $('html, body').animate({
         scrollTop: $("#mapping").offset().top
     }, 2000);
