--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="content ribbon">
         <h2 class="content-head is-center" style="color: white;">With a <strong><u><em>$100 million</em></u></strong> Investment</h2>
         <p class="is-center">We can assume the median price of a house in San Francisco is $1,236,700 <a style="color: white;" href="https://www.zillow.com/san-francisco-ca/home-values/">(Zillow.com)</a>, So therefore we can purchase roughly 80 houses. By determining the most profitable houses based on price per night and frequency of tenants (determined using number of reviews per month), we can determine our income per year with these 80 profitable houses. Assuming the 
-        tenants stay the average <a style="color: white;" href="https://blog.atairbnb.com/economic-impact-airbnb/">3.5 days</a>, the total income per year would be roughly $8,202,694.08. This would mean it would take <strong>12</strong> years to break even. <a style="color: red" href="data/investment.csv">Click Here</a> for a csv file listing the coordinates and yearly income of houses to be purchased.</p>
+        tenants stay the average <a style="color: white;" href="https://blog.atairbnb.com/economic-impact-airbnb/">3.5 days</a>, the total income per year would be roughly $8,202,694.08. This would mean it would take <strong>12+</strong> years to break even. <a style="color: red" href="data/investment.csv">Click Here</a> for a csv file listing the coordinates and yearly income of houses to be purchased.</p>
         
     </div>
 
